[gd_scene load_steps=17 format=3 uid="uid://bjibdacmkx1ol"]

[ext_resource type="Texture2D" uid="uid://ra0p21t360pd" path="res://assets/todo/select_pressed.png" id="1_0tit2"]
[ext_resource type="Script" uid="uid://bvv0gxexmtlr8" path="res://scripts/todo/todo_entry.gd" id="1_syqqh"]
[ext_resource type="Texture2D" uid="uid://b6hbwyw7025um" path="res://assets/todo/select_not_pressed.png" id="2_5go5w"]
[ext_resource type="Texture2D" uid="uid://cpw11vnuncyxo" path="res://assets/todo/button_up.png" id="2_25ert"]
[ext_resource type="Texture2D" uid="uid://qkkketqa0734" path="res://assets/todo/button_down.png" id="3_mi5g8"]
[ext_resource type="Texture2D" uid="uid://c0d7hoqw8je86" path="res://assets/todo/checked.png" id="6_npjjd"]
[ext_resource type="Texture2D" uid="uid://bllrjr1mcafr1" path="res://assets/todo/unchecked.png" id="7_a075a"]
[ext_resource type="Texture2D" uid="uid://d2mr2hoo24on8" path="res://assets/todo/trash.png" id="8_eaxmw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjfi4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igqh1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5c4ee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rlbqf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2t34a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vvyot"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipkct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohqgc"]

[node name="entry" type="Panel"]
custom_minimum_size = Vector2(0, 87.18)
size_flags_horizontal = 3
script = ExtResource("1_syqqh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 39.0
offset_bottom = -0.18
grow_vertical = 2

[node name="reposition" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pos_up" type="Button" parent="Panel/reposition"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vjfi4")
icon = ExtResource("2_25ert")

[node name="pos_down" type="Button" parent="Panel/reposition"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_igqh1")
icon = ExtResource("3_mi5g8")

[node name="select" type="CheckBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.885
offset_top = -24.5
offset_right = 77.885
offset_bottom = 24.5
grow_vertical = 2
size_flags_horizontal = 2
theme_override_colors/icon_hover_color = Color(0.76, 0.00759999, 0.00759999, 0.780392)
theme_override_colors/icon_pressed_color = Color(0.59709, 0.2574, 0.78, 0.588235)
theme_override_styles/focus = SubResource("StyleBoxEmpty_5c4ee")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rlbqf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2t34a")
theme_override_icons/checked = ExtResource("1_0tit2")
theme_override_icons/unchecked = ExtResource("2_5go5w")
icon_alignment = 1

[node name="done" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -22.457
offset_right = 85.0
offset_bottom = 26.543
grow_vertical = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_vvyot")
theme_override_icons/checked = ExtResource("6_npjjd")
theme_override_icons/unchecked = ExtResource("7_a075a")

[node name="task" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 89.0
offset_right = -52.0
offset_bottom = -0.18
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ipkct")
placeholder_text = "todo"
flat = true

[node name="line" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -1.59
offset_right = -48.0
offset_bottom = 2.41
grow_horizontal = 2
grow_vertical = 2
color = Color(0.58, 0.58, 0.58, 0.690196)

[node name="delete" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -42.117
offset_right = -2.0
offset_bottom = -2.117
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ohqgc")
icon = ExtResource("8_eaxmw")

[connection signal="pressed" from="Panel/reposition/pos_up" to="." method="_on_pos_up_pressed"]
[connection signal="pressed" from="Panel/reposition/pos_down" to="." method="_on_pos_down_pressed"]
[connection signal="toggled" from="done" to="." method="_on_done_toggled"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
